# mi6-eco-agent-benchmark

./: .gitignore  README.md  pyproject.toml
src/benchmark/: __init__.py  case_builder.py  cli.py  config.py  llm.py  models.py  top_resolver.py  validator.py  variant_gen.py
src/benchmark/generators/: __init__.py  design_json_gen.py  flist_gen.py  load_tcl_gen.py  sdc_gen.py
src/benchmark/rtl_analyzer/: __init__.py  hierarchy.py  verilog_parser.py
src/benchmark/templates/: __init__.py  func_sdc.j2
